# MaaLogAnalyzer

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: cliff.toml
.github/workflows/: build.yml  deploy-pages.yml  deploy.yml  pr-check.yml  release-npm.yml  release-vscode.yml
docs/: FOLLOW_REGRESSION.md  LOG_PARSER_ARCHITECTURE.md  SUPPORT_ANALYZER_REALTIME_PROTOCOL.md  TOOL_ONLY_ORCHESTRATOR_PROTOCOL.md  TUTORIAL_PROTOCOL.md
patches/: vue-virtual-scroller@2.0.0-beta.8.patch
scripts/: fix-esm-imports.mjs
src/: App.vue  Index.vue  global.d.ts  main.ts  style.css  types.ts  vue-virtual-scroller.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-vscode/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  package.nls.json  package.nls.zh-cn.json  tsconfig.json  vite.config.ts
src-vscode/src/: extension.ts
src/ai/: client.ts  contextBuilder.ts
src/components/: FlowchartNode.vue  FlowchartOrthogonalEdge.vue  NodeCard.vue  NodeCardCompact.vue  NodeCardDetailed.vue  NodeCardTree.vue  SafePreviewImage.vue  StatusIcon.vue  TourOverlay.vue
src/composables/: useBridge.ts  useIsMobile.ts
src/embed/: profiles.ts
src/kernel/: cli.ts  index.ts  nodeInput.ts  protocol.ts
src/tutorial/: steps.ts  types.ts
src/utils/: aiSettings.ts  archiveExtractor.ts  archiveShared.ts  bridgeEvents.ts  embedMode.ts  fileDialog.ts  flowLabels.ts  flowchartBuilder.ts  imageSrc.ts  logFileDiscovery.ts  logParser.ts  logParserActionHelpers.ts  logParserEventLine.ts  (+7 more)
(+171 files in other folders)
